--- a/config.json
+++ b/config.json
@@ -3,12 +3,11 @@
     "url": "http://localhost:8080",
     "name": "SVA HTML",
     "owner": "Daniel Hahn",
-    "description": "Fall 2014",
+    "description": "Spring 2015",
 	"date": "September 24, 2014 to December 17, 2014",
 	"navitems" : [1,2,3,4,5,6,7,8,9,10,11],
-	  "dates": ["Sept 1", "Sept 2", "Sept 3"]
-
-
+    "startDate": "January 28, 2014",
+    "endDate": "April 22, 2014"
   },
 	"plugins": [
 		"./plugins/paginator.coffee",
