--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "owner": "Daniel Hahn",
     "description": "Spring 2015",
 	"date": "September 24, 2014 to December 17, 2014",
-	"navitems" : [1,2,3,4,5,6,7,8,9,10,11],
+	"totalItems" : 12,
     "startDate": "January 28, 2014",
     "endDate": "April 22, 2014"
   },
