--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
 	"date": "September 24, 2014 to December 17, 2014",
 	"totalItems" : 12,
     "startDate": "January 28, 2014",
-    "endDate": "April 22, 2014"
+    "endDate": "April 22, 2014",
+    "note": "No Class- March 4, 2015"
   },
 	"plugins": [
 		"./plugins/paginator.coffee",
