--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "moment": "2.x",
+    "moment": "^2.18.1",
     "typogr": "0.5.x",
     "underscore": "1.4.x",
     "wintersmith-less": "^0.2.3"
