--- a/config.json
+++ b/config.json
@@ -1,19 +1,52 @@
 {
   "locals": {
-    "url": "http://localhost:8080",
-    "name": "SVA HTML",
-    "owner": "Daniel Hahn",
-    "description": "Fall 2017",
-    "date": "September 20, 2017 to December 13, 2017",
-    "totalItems" : 12,
-    "startDate": "September 20, 2017",
-    "endDate": "December 13, 2017",
-    "classnote" : "Please enter your Name, Email and Phone Number here -> ",
-    "classaction" : null
+      "url": "http://localhost:8080",
+      "name": "SVA HTML",
+      "owner": "Daniel Hahn",
+      "description": "Fall 2017",
+      "date": "September 20, 2017 to December 13, 2017",
+      "totalItems" : 12,
+      "startDate": "September 20, 2017",
+      "endDate": "December 13, 2017",
+      "classnote" : "Please enter your Name, Email and Phone Number here -> ",
+      "classaction" : null,
+      "navs": [
+        {
+          "title": "Home",
+          "class": "home",
+          "url": "/"
+        },
+        {
+          "title": "Lessons",
+          "class": "lesson",
+          "url": "/lessons/"
+        },
+        {
+          "title": "Tag List",
+          "class": "tag",
+          "url": "/notes/tags/"
+        },
+        {
+          "title": "CSS 3",
+          "class": "css",
+          "url": "/notes/css/"
+        },
+        {
+          "title": "ASCII Codes",
+          "class": "ascii",
+          "url": "/notes/ascii/"
+        },
+        {
+          "title": "Colors",
+          "class": "color",
+          "url": "/notes/colors/"
+        }
+      ]
     },
     "plugins": [
         "./plugins/paginator.coffee",
-        "wintersmith-less"
+        "wintersmith-less",
+        "wintersmith-livereload"
     ],
   "require": {
     "moment": "moment",
@@ -29,5 +62,12 @@
   },
   "paginator": {
   "perPage": 12
+  },
+  "less" : {
+    "sourceMap": true,
+    "sourceMapFilename": "content/css/main.css.map",
+    "sourceMapURL": "/css/main.css.map",
+    "sourceMapBasepath": "content",
+    "sourceMapRootpath": "/"
   }
 }
