Update with Spring 2018 content

--- a/config.json
+++ b/config.json
@@ -3,11 +3,11 @@
       "url": "http://localhost:8080",
       "name": "SVA HTML",
       "owner": "Daniel Hahn",
-      "description": "Fall 2017",
-      "date": "September 20, 2017 to December 13, 2017",
+      "description": "Spring 2018",
+      "date": "January 24, 2018 to April 18, 2018",
       "totalItems" : 12,
-      "startDate": "September 20, 2017",
-      "endDate": "December 13, 2017",
+      "startDate": "January 24, 2018",
+      "endDate": "April 18, 2018",
       "classnote" : "Please enter your Name, Email and Phone Number here -> ",
       "classaction" : null,
       "navs": [
@@ -68,12 +68,5 @@
   },
   "paginator": {
   "perPage": 12
-  },
-  "less" : {
-    "sourceMap": true,
-    "sourceMapFilename": "content/css/main.css.map",
-    "sourceMapURL": "/css/main.css.map",
-    "sourceMapBasepath": "content",
-    "sourceMapRootpath": "/"
   }
 }
