--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "moment": "^2.18.1",
     "typogr": "0.5.x",
     "underscore": "1.4.x",
-    "wintersmith-less": "^0.2.3",
-    "wintersmith-livereload": "^1.0.0"
+    "wintersmith-livereload": "^1.0.0",
+    "wintersmith-sassify": "^1.0.2"
   },
   "repository": "none"
 }
