remove signup link

--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
       "totalItems" : 12,
       "startDate": "January 24, 2018",
       "endDate": "April 18, 2018",
-      "classaction" : "https://goo.gl/forms/TfgeOP429S6j39962",
+      "classaction" : null,
       "navs": [
         {
           "title": "Home",
