--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "dependencies": {
-    "moment": "^2.18.1",
-    "typogr": "0.5.x",
-    "underscore": "1.4.x",
-    "wintersmith-livereload": "^1.0.0",
+    "moment": "^2.21.0",
+    "typogr": "0.6.7",
+    "underscore": "1.8.3",
     "wintersmith-sassify": "^1.0.2"
   },
   "repository": "none"
